force-app/main/default/objects/Patient__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Address</label>
    <referenceTo>Address__c</referenceTo>
    <relationshipLabel>Patients</relationshipLabel>
    <relationshipName>Patients</relationshipName>
    <type>Lookup</type>
</CustomField>