force-app/main/default/objects/Patient__c/fields/Blood_Type__c.field-meta.xml
<CustomField>
    <fullName>Blood_Type__c</fullName>
    <label>Blood Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ARhPositive</fullName>
            </value>
            <value>
                <fullName>ARhNegative</fullName>
            </value>
            <value>
                <fullName>BRhPositive</fullName>
            </value>
            <value>
                <fullName>BRhNegative</fullName>
            </value>
            <value>
                <fullName>ABRhPositive</fullName>
            </value>
            <value>
                <fullName>ABRhNegative</fullName>
            </value>
            <value>
                <fullName>ORhPositive</fullName>
            </value>
            <value>
                <fullName>ORhNegative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>