force-app/main/default/objects/Patient__c/fields/Chronic_Diseases__c.field-meta.xml
<CustomField>
    <fullName>Chronic_Diseases__c</fullName>
    <label>Chronic Diseases</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>