force-app/main/default/objects/Patient__c/fields/Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Full_Name__c</fullName>
    <formula>First_Name__c &amp; &quot; &quot; &amp; IF(ISBLANK(Middle_Name__c), &quot;&quot;, Middle_Name__c + &quot; &quot;) &amp; Last_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Name</label>
    <type>Text</type>
</CustomField>