force-app/main/default/objects/Patient__c/fields/Insurance__c.field-meta.xml
<CustomField>
    <fullName>Insurance__c</fullName>
    <label>Insurance</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NFZ</fullName>
                <default>true</default>
                <label>NFZ</label>
            </value>
            <value>
                <fullName>External</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>