force-app/main/default/objects/Patient__c/fields/PESEL__c.field-meta.xml
<CustomField>
    <fullName>PESEL__c</fullName>
    <label>PESEL</label>
    <length>11</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>